--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -866,7 +866,7 @@ a .description:hover {
 
 .post-list .deco1 {
     border-top: 15px solid #ececec;
-    margin: 75px 0;
+    margin: 0;
     width: 100%;
 }
 
