--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -873,7 +873,7 @@ img.alignright {
     float: left;
     margin: 20px 0px 20px 20px;
 }
-p +.alignright   { float: right;} 
+.alignright + p, p + .alignright   { float: right;} 
 .alignleft + p, p + .alignleft  { float: left; }
 
 
