--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -1483,3 +1483,19 @@ span.wpcf7-not-valid-tip {
 .gallery .gallery-item dt {
     width: 100%;
 }
+
+.contact-info a {
+    width: 100%;
+    float: left;
+    font-style: italic;
+    color: #999;
+}
+.contact-info  p { margin-top: 10px;}
+
+div.wpcf7-validation-errors {
+    border: 2px solid;
+    text-align: center;
+}
+
+.wpcf7-form-control-wrap {  position: initial}
+span.wpcf7-not-valid-tip{ background-color: #f1f1f1; color: #222}
