--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -372,15 +372,16 @@ section.container header.title nav a {
 }
 @media(max-width:1900px) {
 .post-list .post-img img {
-    width: 450px
+    width: 450px;
+    height: auto;
 }
 
 @media(max-width:768px) {
-    .home .post-list .post-img img , .post-list .post-img img, .post-list img {width: 70%}
+    .home .post-list .post-img img , .post-list .post-img img, .post-list img {width: 70%; height: auto;}
 }
 
 @media(max-width:375px) {
-    .home .post-list .post-img img, .post-list .post-img img, .post-list img  {width: 90%}
+    .home .post-list .post-img img, .post-list .post-img img, .post-list img  {width: 90%; height: auto;}
 }
 
 .post-list.home {
