--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -373,6 +373,7 @@ section.container header.title nav a {
 }
 
 @media(max-width:1900px) {
+    .home .post-entry{ padding: 0 50px}
     .post-list.col-md-12 img {
         width: 450px;
         height: auto;
@@ -384,6 +385,7 @@ section.container header.title nav a {
 }
 
 @media(max-width:768px) {
+        .home .post-entry{ padding: 0 30px}
     iframe {
         width: 100%;
     }
@@ -398,6 +400,7 @@ section.container header.title nav a {
 }
 
 @media(max-width:414px) {
+       .home .post-entry{ padding: 0 px}
     iframe {
         width: 100%;
     }
