--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -60,7 +60,8 @@ h2 {
 }
 
 h3 {
-    font-size: 20px
+    font-size: 20px;
+    margin-bottom: 20px;
 }
 
 h4 {
@@ -1001,10 +1002,20 @@ p+.alignleft {
     width: 100%!important
 }
 
+.wp-caption img{ margin-top:0;}
+
+.wp-caption + img
+{ margin-top: 37px;}
+
+.wp-caption > img
+{ margin-top: 37px;}
+
+.alignnone + .alignnone { margin-bottom: 37px;}
+
 p.wp-caption-text {
     color: #999;
     display: inline-block;
-    font-size: 15px;
+    font-size: 18px;
     font-style: italic;
     line-height: 100%;
     margin: 0 auto 10px;
