--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -1007,7 +1007,7 @@ p+.alignleft {
 .wp-caption + img
 { margin-top: 37px;}
 
-.wp-caption > img
+.wp-caption + img
 { margin-top: 37px;}
 
 .alignnone + .alignnone { margin-bottom: 20px;}
@@ -1017,7 +1017,7 @@ p+.alignleft {
 p.wp-caption-text {
     color: #999;
     display: inline-block;
-    font-size: 16px;
+    font-size: 14px;
     font-style: italic;
     line-height: 100%;
     margin: 0 auto 10px;
