--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -1010,8 +1010,14 @@ p+.alignleft {
 .wp-caption + img
 { margin-top: 37px;}
 
-.alignnone + .alignnone { margin-bottom: 20px;}
+.alignnone + .alignnone {
+    margin-bottom: 20px;
+    margin-top: 0;}
 
+img.alignnone + img.alignnone {
+    margin-bottom: 20px;
+    margin-top: 37px;
+}
 .alignnone  p { margin-top: 0;}
 
 p.wp-caption-text {
