--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -72,7 +72,7 @@ p {
     font-size: 20px;
     font-weight: 300;
     line-height: 30px;
-    margin: 21px 0
+    margin:0  0 21px 0
 }
 
 p+p {
@@ -1001,6 +1001,8 @@ p+.alignleft {
     width: 100%!important
 }
 
+.post-img { margin-bottom: 30px;}
+
 
 img.alignnone  { margin-bottom: 30px; }
 div.wp-caption  + img.alignnone  { margin-bottom: 0;}
@@ -1012,7 +1014,7 @@ p.wp-caption-text {
     font-size: 14px;
     font-style: italic;
     line-height: 100%;
-    margin:5px auto 30px;
+    margin:10px auto 30px;
     width: 100%;
     font-family: "Playfair Display",serif;
 }
