--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -72,11 +72,11 @@ p {
     font-size: 20px;
     font-weight: 300;
     line-height: 30px;
-    margin:0  0 21px 0
+    margin:0  0 40px 0
 }
 
-p+p {
-    margin: 30px 0 30px
+p + p {
+    margin: 0 0 40px
 }
 
 .navbar-wrapper {
@@ -1001,7 +1001,7 @@ p+.alignleft {
     width: 100%!important
 }
 
-.post-img { margin-bottom: 30px;}
+.post-img { margin-bottom: 40px;}
 
 
 img.alignnone  { margin-bottom: 30px; }
@@ -1014,7 +1014,7 @@ p.wp-caption-text {
     font-size: 14px;
     font-style: italic;
     line-height: 100%;
-    margin:10px auto 30px;
+    margin:10px auto 40px;
     width: 100%;
     font-family: "Playfair Display",serif;
 }
