--- a/wp-content/themes/cp/css/editor-style.css
+++ b/wp-content/themes/cp/css/editor-style.css
@@ -1000,7 +1000,7 @@ p+.alignleft {
     margin: 0 auto;
     width: 100%!important
 }
-
+.post-entry img + img { margin-bottom: 40px;}
 .post-img { margin-bottom: 40px;}
 
 
