--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -61,7 +61,7 @@ h2 {
 
 h3 {
     font-size: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 h4 {
@@ -69,14 +69,17 @@ h4 {
 }
 
 p {
+    margin: 15px 0;
     font-size: 20px;
     font-weight: 300;
     line-height: 30px;
-    margin:0  0 40px 0
 }
 
+
+div + p, img + p { 15px 0;}
+
 p + p {
-    margin: 0 0 40px
+    margin:15px 0;
 }
 
 .navbar-wrapper {
@@ -373,7 +376,9 @@ section.container header.title nav a {
 }
 
 @media(max-width:1900px) {
-    .home .post-entry{ padding: 0 50px}
+    .home .post-entry {
+        padding: 0 50px
+    }
     .post-list.col-md-12 img {
         width: 450px;
         height: auto;
@@ -385,8 +390,11 @@ section.container header.title nav a {
 }
 
 @media(max-width:768px) {
-        .home .post-entry{ padding: 0 30px}
-    iframe, .twitter-iframe   {
+    .home .post-entry {
+        padding: 0 30px
+    }
+    iframe,
+    .twitter-iframe {
         width: 100%!important;
     }
     .post-list.col-md-12 img {
@@ -400,9 +408,11 @@ section.container header.title nav a {
 }
 
 @media(max-width:414px) {
-       .home .post-entry{ padding: 0 px}
-
-    iframe,  .twitter-iframe   {
+    .home .post-entry {
+        padding: 0 px
+    }
+    iframe,
+    .twitter-iframe {
         width: 100%!important;
     }
     .post-list.col-md-12 img {
@@ -413,7 +423,6 @@ section.container header.title nav a {
         width: 100%;
         height: auto;
     }
-
 }
 
 .post-list .post-content {
@@ -474,13 +483,10 @@ section.container header.title nav a {
     font-family: "Playfair Display", serif
 }
 
-.post-list h3 {
-    font-size: 22px;
-    margin-top: 0;
-    font-weight: 300;
-    letter-spacing: -1px;
-    margin: 30px auto 0;
-    text-transform: uppercase
+.post-list h3 {}
+
+.wp-caption + p {
+    margin: 0;
 }
 
 @media(max-width:414px) {
@@ -522,7 +528,8 @@ ol.comment-list {
 }
 
 .comment-awaiting-moderation {
-    background-color: yellow
+    background-color: yellow;
+    display: none;
 }
 
 .comment-author {
@@ -1001,27 +1008,35 @@ p+.alignleft {
     width: 100%!important
 }
 
-.post-img { margin-bottom: 40px;}
+.post-entry img + img {
+    margin: 15px 0;
+}
 
+.post-img {
+    margin-bottom: 30px;
+}
 
-img.alignnone  { margin-bottom: 40px; }
-div.wp-caption  + img.alignnone  { margin-bottom: 0;}
+img.alignnone {
+    margin: 15px 0px;
+}
 
+div.wp-caption + img.alignnone {
+    margin-bottom: 20px;
+}
 
-p.wp-caption-text {
+img + p.wp-caption-text {
     color: #999;
     display: inline-block;
     font-size: 14px;
     font-style: italic;
     line-height: 100%;
-    margin:10px auto 40px;
+    margin: 10px auto 15px;
     width: 100%;
-    font-family: "Playfair Display",serif;
+    font-family: "Playfair Display", serif;
 }
 
-
-p img+p img {
-    margin-top: 20px
+p img + p img {
+    margin: 15px 0px
 }
 
 @media(max-width:510px) {
