--- a/wp-content/themes/cp/css/editor-style.css
+++ b/wp-content/themes/cp/css/editor-style.css
@@ -373,6 +373,7 @@ section.container header.title nav a {
 .post-list img {
     border: 1px solid #e6e6e6;
     padding: 10px;
+    margin: 15px 0;
 }
 
 @media(max-width:1900px) {
