--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -1612,3 +1612,7 @@ span.wpcf7-not-valid-tip {
     background-color: #f1f1f1;
     color: #222
 }
+
+.social-2 { margin-bottom: 100px;}
+
+.social-2 h3  { font-size: 35px;  border-top: 1px solid #ccc;  }
